[package]
name = "kmer_counter_python_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "kmer_counter"
crate-type = ["cdylib"]


[dependencies]
flate2 = { version = "1.0.17"} # features = ["zlib-ng"], default-features = false }
pyo3 = { version = "0.17", features = ["extension-module"] }
hashbrown = { version = "*", features = ["rayon"] }
rand = { version = "*", features = ["std"] }

numpy = "0.17"
rayon = "*"


[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = 'fat'
#extra-link-arg='-liomp5'
